syntax = "proto3";

option go_package = "./product";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
    rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse) {}
}

message CreateProductRequest {
    string name = 1;
    double price = 2;
    int32 quantity = 3;
}

message CreateProductResponse {
    int32 id = 1;
}

message GetProductRequest {
    int32 id = 1;
}

message GetProductResponse {
    string name = 1;
    double price = 2;
    int32 quantity = 3;
}

message GetAllProductsRequest {}

message Product {
    int32 id = 1;
    string name = 2;
    double price = 3;
    int32 quantity = 4;
}

message GetAllProductsResponse {
    repeated Product products = 1;
}
